<resources>
    <string name="app_name">Material Design</string>
    <string name="interstitial_topic">Material\nDesign</string>
    <string name="interstitial_sub_topic">Metaphor &amp; Magic</string>
    <string name="action_card_title">Action card</string>
    <string name="action_card_clear_button">Clear</string>
    <string name="action_card_submit_button">Submit</string>
    <string name="elevation_card_title">Elevation card</string>
    <string name="elevation_card_click_me">Click me!</string>
    <string name="detail_view">Detail page</string>
    <string name="detail_title_view_name">detail:title:text</string>
    <string name="detail_info_view_name">detail:info:text</string>
    <string name="card_view_name">card:view:name</string>
    <string name="navigation_card_title">Navigation card</string>
    <string name="navigation_card_click_me">Click me!</string>
    <string name="interstitial_authors">Thomas Belk\nDan Cottner</string>
    <string name="drawer_open">Navigation drawer is open</string>
    <string name="drawer_close">Navigation drawer is closed</string>
    <string name="video_loading">Loading video&#8230;</string>
    <string name="presentation_what_is_material_title">What is Material Design?</string>
    <string name="presentation_one_adaptive_design_title">One Adaptive Design</string>
    <string name="presentation_visual_design_title">Visual Design</string>
    <string name="presentation_app_environment_title">App Environment</string>
    <string name="presentation_paper_and_ink_title">Paper and Ink</string>
    <string name="presentation_meaningful_motion_title">Meaningful Motion</string>
    <string name="dev_activity_transition_title">Activity Transition</string>
    <string name="dev_card_view_title">Card View</string>
    <string name="dev_elevation_title">Elevation</string>
    <string name="dev_view_clipping_title">View Clipping</string>
    <string name="dev_view_animation_title">View Animation</string>
    <string name="dev_ripple_title">Ripple</string>
    <string-array name="drawer_titles">
        <item>Material Design</item>
        <item>Principles</item>
        <item>Development Concepts</item>
        <item>Playground</item>
    </string-array>
    <string-array name="drawer_classes">
        <item>com.wildsmith.material.interstitial.InterstitialActivity</item>
        <item></item>
        <item></item>
        <item>com.wildsmith.material.playground.PlaygroundActivity</item>
    </string-array>
    <string-array name="drawer_images">
        <item></item>
        <item>northstar_white</item>
        <item>curly_white</item>
        <item>slide_white</item>
    </string-array>
    <string-array name="material_design_titles" />
    <string-array name="material_design_classes" />
    <string-array name="principles_titles">
        <item>What is Material Design?</item>
        <item>App Environment</item>
        <item>Paper and Ink</item>
        <item>Visual Design</item>
        <item>Meaningful Motion</item>
        <item>One Adaptive Design</item>
    </string-array>
    <string-array name="principles_classes">
        <item>com.wildsmith.material.presentation.uitopics.WhatIsMaterialActivity</item>
        <item>com.wildsmith.material.presentation.uitopics.AppEnvironmentActivity</item>
        <item>com.wildsmith.material.presentation.uitopics.PaperAndInkActivity</item>
        <item>com.wildsmith.material.presentation.uitopics.VisualDesignActivity</item>
        <item>com.wildsmith.material.presentation.uitopics.MeaningfulMotionActivity</item>
        <item>com.wildsmith.material.presentation.uitopics.OneAdaptiveDesignActivity</item>
    </string-array>
    <string-array name="development_concepts_titles">
        <item>View Clipping</item>
        <item>Activity Transition</item>
        <item>View Animation</item>
        <item>Elevation</item>
        <item>Ripple</item>
        <item>CardView</item>
    </string-array>
    <string-array name="development_concepts_classes">
        <item>com.wildsmith.material.presentation.devtopics.ViewClippingActivity</item>
        <item>com.wildsmith.material.presentation.devtopics.ActivityTransitionActivity</item>
        <item>com.wildsmith.material.presentation.devtopics.ViewAnimationActivity</item>
        <item>com.wildsmith.material.presentation.devtopics.ElevationActivity</item>
        <item>com.wildsmith.material.presentation.devtopics.RippleActivity</item>
        <item>com.wildsmith.material.presentation.devtopics.CardViewActivity</item>
    </string-array>
    <string-array name="playground_titles" />
    <string-array name="playground_classes" />
    <string-array name="what_is_material_classes">
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationVideoRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationVideoRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationTitleRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationNavigationRow</item>
    </string-array>
    <string-array name="what_is_material_values">
        <item></item>
        <item>@string/presentation_what_is_material_title</item>
        <item></item>
        <item>Google’s new “visual language … that synthesizes the classic principles of good design with the innovation and possibility of technology and science”</item>
        <item>Metaphor</item>
        <item>Grounded in the tactile attributes of paper and ink\n\nElements coexist and move around in a shared, rationalized space</item>
        <item>what_is_material_boucicaut_meister</item>
        <item>what_is_material_card</item>
        <item>Magic</item>
        <item>Harnesses technology to make the impossible possible\n\nUser input ripples through the interface and transforms the design</item>
        <item>what_is_material_paper_transforming</item>
        <item>what_is_material_input_ripple</item>
        <item>Metaphor + Magic = ?</item>
        <item>what_is_material_magic_the_gathering</item>
        <item></item>
        <item></item>
        <item>1</item>
        <item>@string/presentation_app_environment_title</item>
    </string-array>
    <string-array name="app_environment_classes">
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationNavigationRow</item>
    </string-array>
    <string-array name="app_environment_values">
        <item></item>
        <item>@string/presentation_app_environment_title</item>
        <item>Device Space</item>
        <item>Material elements reside within the same physical space afforded by the device\n\nThin layers of paper stack on top of each other to create the interface</item>
        <item>app_environment_device_space</item>
        <item>Dimensionality</item>
        <item>Depth within an app communicates hierarchy and importance\n\nDepth is NOT ornament</item>
        <item>app_environment_depth_hierarchy</item>
        <item>0</item>
        <item>@string/presentation_what_is_material_title</item>
        <item>2</item>
        <item>@string/presentation_paper_and_ink_title</item>
    </string-array>
    <string-array name="paper_and_ink_classes">
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationVideoRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationNavigationRow</item>
    </string-array>
    <string-array name="paper_and_ink_values">
        <item></item>
        <item>@string/presentation_paper_and_ink_title</item>
        <item>Paper Craft</item>
        <item>Every pixel drawn on the screen resides on a sheet of paper\n\nSeams, steps, and toolbars are created with different arrangements of paper</item>
        <item>paper_and_ink_seam</item>
        <item>paper_and_ink_step</item>
        <item>paper_and_ink_toolbar</item>
        <item>paper_and_ink_fab_seam</item>
        <item>paper_and_ink_fab_step</item>
        <item>Ink</item>
        <item>Paper is the surface; ink is the content\n\nInk is confined by the bounds of the paper it saturates</item>
        <item>paper_and_ink_ink</item>
        <item>paper_and_ink_ink_fill</item>
        <item>1</item>
        <item>@string/presentation_app_environment_title</item>
        <item>3</item>
        <item>@string/presentation_visual_design_title</item>
    </string-array>
    <string-array name="visual_design_classes">
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationActionBarRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationVideoRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationInformationRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationImageRow</item>
        <item>com.wildsmith.material.presentation.rows.PresentationNavigationRow</item>
    </string-array>
</resources>