<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@android:color/holo_blue_dark"
        card_view:cardCornerRadius="6dp" >
        <!-- android:elevation="20dp" -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/action_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/action_card_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/action_button_close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:antialias="true"
                android:dither="true"
                android:filter="true"
                android:scaleType="fitCenter"
                android:src="@drawable/close_button_white" />
            <!-- android:background="?android:attr/selectableItemBackgroundBorderless" -->

            <com.wildsmith.material.views.EditTextLabelFloat
                android:id="@+id/action_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="test hint"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/action_clear_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_card_clear_button" />
                <!-- android:background="?android:attr/selectableItemBackgroundBorderless" -->

                <Button
                    android:id="@+id/action_submit_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/action_card_submit_button" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>